--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@types/react": "^18.2.75",
     "aws-sdk": "^2.1599.0",
     "dayjs": "^1.11.10",
+    "kakao": "^0.4.1",
     "react": "^18.2.0",
     "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "remixicon": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
