--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
     "web-vitals": "^2.1.4",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
     "remixicon": "^4.2.0",
   },
   "scripts": {
