--- a/package.json
+++ b/package.json
@@ -7,20 +7,21 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/react": "^18.2.75",
-    "axios": "^1.6.8",
-    "formik": "^2.4.5",
     "aws-sdk": "^2.1599.0",
+    "axios": "^1.6.8",
     "dayjs": "^1.11.10",
+    "formik": "^2.4.5",
     "kakao": "^0.4.1",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
+    "remixicon": "^4.2.0",
     "web-vitals": "^2.1.4",
-    "yup": "^1.4.0",
-    "remixicon": "^4.2.0"
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -47,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-beautiful-dnd": "^13.1.8",
     "tailwindcss": "^3.4.1"
   }
 }
