--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "aws-sdk": "^2.1599.0",
     "axios": "^1.6.8",
     "dayjs": "^1.11.10",
+    "eslint": "^8.57.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "formik": "^2.4.5",
     "kakao": "^0.4.1",
     "react": "^18.2.0",
