--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ag-grid-community/client-side-row-model": "^31.3.1",
+    "@ag-grid-community/core": "^31.3.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/react": "^18.2.75",
+    "ag-grid-community": "^31.3.1",
+    "ag-grid-react": "^31.3.1",
     "aws-sdk": "^2.1599.0",
     "axios": "^1.6.8",
     "dayjs": "^1.11.10",
